--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="index (2)/style.css">
 </head>
 <body>
     
